// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-type.ts 1`] = `
// ref: https://github.com/Microsoft/TypeScript/pull/22592

export const x: import("./foo") = { x: 0, y: 0 };

export let y: import("./foo2").Bar.I = { a: "", b: 0 };

export let shim: typeof import("./foo2") = {
    Bar: Bar2
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// ref: https://github.com/Microsoft/TypeScript/pull/22592

export const x: import("./foo") = { x: 0, y: 0 };

export let y: import("./foo2").Bar.I = { a: "", b: 0 };

export let shim: typeof import("./foo2") = {
  Bar: Bar2
};

`;

exports[`import-type.ts 2`] = `
// ref: https://github.com/Microsoft/TypeScript/pull/22592

export const x: import("./foo") = { x: 0, y: 0 };

export let y: import("./foo2").Bar.I = { a: "", b: 0 };

export let shim: typeof import("./foo2") = {
    Bar: Bar2
};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// ref: https://github.com/Microsoft/TypeScript/pull/22592

export const x: import('./foo') = { x: 0, y: 0 };

export let y: import('./foo2').Bar.I = { a: '', b: 0 };

export let shim: typeof import('./foo2') = {
  Bar: Bar2
};

`;
